--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
     "@types/react-dom": "~18.0.10",
-    "@modern-js/builder-rspack-provider": "2.12.0"
+    "@modern-js/builder-rspack-provider": "2.12.0",
+    "@modern-js/plugin-ssg": "2.12.0"
   }
 }
